# yew-canvas2d-tetris

./: Cargo.toml  README.md  index.html
src/: main.rs
src/dom_utils/: canvas.rs  mod.rs  types.rs  window.rs
src/game/: entity.rs  game.rs  mod.rs
src/game/entities/: mod.rs  smile.rs
src/game/tetris/: board.rs  box_shape.rs  cell.rs  i_shape.rs  j_shape.rs  l_shape.rs  mod.rs  s_shape.rs  shape.rs  sr_shape.rs  t_shape.rs  tetris.rs
src/utils/plane/: point.rs
