[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-render = "0.1.1"
log = "0.4.17"
wasm-logger = "0.2.0"
js-sys = "0.3.59"
wasm-bindgen = "0.2.82"
derive_builder = "0.11.2"

[dependencies.instant]
version="0.1.12"
features=[
  "stdweb",
  "wasm-bindgen"
]

[dependencies.yew]
git="https://github.com/yewstack/yew/"
features=[
  "csr"
]

[dependencies.web-sys]
version="0.3.59"
features=[
  "HtmlCanvasElement", 
  "Window", 
  "Document",
  "Element",
  "CanvasRenderingContext2d",
  "DomWindowResizeEventDetail"
]
